--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,400 @@
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  height: 100%;
+  color: #264653;
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  font-family: "Lilita One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.layout {
+  display: flex;
+  flex-direction: column;
+}
+
+nav {
+  background-color: #eb3f1c;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 150px;
+}
+
+.logo {
+  width: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  animation: rotar 10s ease infinite;
+}
+
+@keyframes rotar {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.logo img {
+  width: 100%;
+  height: 8rem;
+  object-fit: contain;
+  text-align: center;
+}
+
+.titulo-principal {
+  width: 30%;
+  display: flex;
+  align-items: center;
+}
+
+.titulo-principal h1 {
+  font-size: 3rem;
+  color: #fff;
+  transition: font-size 1s ease;
+}
+
+.titulo-principal h1:hover {
+  font-size: 3.2rem;
+}
+
+.menu {
+  width: 50%;
+  padding-right: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.menu ul {
+  display: flex;
+  align-items: center;
+  list-style-type: none;
+  gap: 3rem;
+}
+
+.menu li {
+  color: #fff;
+  transition: color 2s ease 0;
+  transition: font-size 1s ease;
+}
+
+.menu li:hover {
+  color: black;
+  font-size: 1.05rem;
+}
+
+.contenedor-general {
+  display: flex;
+  width: 100%;
+  height: auto;
+}
+
+aside {
+  width: 20%;
+  background-color: #e6aa9e;
+}
+
+.paw {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 5rem;
+  color: #fff;
+  margin-bottom: 2rem;
+}
+
+.sidebar {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 1rem;
+  color: black;
+}
+
+.sidebar ul {
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
+  gap: 0.5rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  margin-top: 1rem;
+  margin-bottom: 1.5rem;
+  border-top: 1px solid #414141;
+  border-bottom: 1px solid #414141;
+}
+
+.sidebar ul a {
+  color: #264653;
+  text-decoration: none;
+}
+
+.sidebar li {
+  color: #264653;
+  transition: color 1s ease;
+}
+
+.sidebar li:hover {
+  color: #b8280b;
+  font-size: 1.05rem;
+}
+
+.sidebar li a {
+  color: #264653;
+  transition: color 1s ease;
+}
+
+.sidebar li a:hover {
+  color: #b8280b;
+  font-size: 1.05rem;
+}
+
+.sidebar h4 {
+  text-align: center;
+}
+
+main {
+  width: 80%;
+  background-color: #f0f0f0;
+}
+
+.galeria {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 100%;
+  margin-bottom: 2rem;
+}
+
+.contenedor-titulo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 2rem;
+}
+
+.contenedor-titulo h2 {
+  font-size: 2.5rem;
+}
+
+.contenedor-cards {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  width: 300px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 1rem;
+  background-color: white;
+  border: 1px solid #ccc;
+  box-shadow: 2px 2px 3px 0px #c6c3b8;
+  margin: 1rem;
+}
+
+.contenedor-img {
+  padding-top: 1rem;
+  padding-bottom: 2rem;
+  border-radius: 2rem;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+
+.card img {
+  width: 230px;
+  height: 100%;
+  filter: grayscale(100%);
+  transition: filter 0.5s ease;
+}
+
+.card img:hover {
+  filter: grayscale(0%);
+}
+
+.body-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.categoria {
+  color: #8b8b8b;
+  font-size: 0.8rem;
+}
+
+.nombre-producto {
+  color: #eb3f1c;
+  font-size: 1.2rem;
+}
+
+.precio {
+  font-style: italic;
+}
+
+.contenedor-btn {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+}
+
+.btn-comprar {
+  padding: 1rem;
+  background-color: #eb3f1c;
+  border-radius: 1rem;
+  font-weight: bold;
+  text-decoration: none;
+  color: #fff;
+  transition: padding 0.5s ease;
+}
+
+.btn-comprar:hover {
+  padding: 1.1rem;
+}
+
+.btn-carro {
+  padding: 1rem;
+  color: #eb3f1c;
+  font-size: 2rem;
+  filter: grayscale(100%);
+  transition: filter 1s ease;
+}
+
+.btn-carro:hover {
+  filter: grayscale(0%);
+}
+
+.up {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  color: #eb3f1c;
+  font-size: 1.4rem;
+  margin-top: 0.5rem;
+  margin-bottom: 2rem;
+  filter: grayscale(100%);
+  transition: filter 1s ease;
+}
+
+.up:hover {
+  filter: grayscale(0%);
+}
+
+footer {
+  background-color: black;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 2rem;
+}
+
+.logo-footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo-footer img {
+  width: 100%;
+  height: 150px;
+  object-fit: contain;
+  filter: grayscale(100%);
+  transition: filter 1s ease;
+}
+
+.logo-footer img:hover {
+  filter: grayscale(0%);
+}
+
+.container-texto-footer {
+  display: flex;
+  flex-direction: column;
+  color: aliceblue;
+}
+
+.container-texto-footer h4 {
+  font-size: 2rem;
+  color: #eb3f1c;
+}
+
+.rrss {
+  padding-top: 0.5rem;
+  padding-bottom: 1rem;
+}
+
+.container-texto-footer a {
+  text-decoration: none;
+  color: aliceblue;
+  animation: rgb 6s ease 0s infinite;
+}
+
+@keyframes rgb {
+  from {
+    color: aliceblue;
+  }
+  10% {
+    color: #0099ff;
+  }
+  50% {
+    color: #00ff00;
+  }
+  75% {
+    color: #ff3399;
+  }
+  100% {
+    color: #6666ff;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+}
+@media screen and (max-width: 768px) {
+}
+@media screen and (max-width: 325px) {
+  nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .logo {
+    margin-top: 4rem;
+  }
+
+  .logo img {
+    width: 200px;
+  }
+
+  .titulo-principal {
+    display: none;
+  }
 }
